# eloquentlog-console-api

./: .build.server.yml  .build.worker.yml  .build.yml  .dockerignore  .env.ci.sample  .env.deploy.sample  .env.docker.sample  .env.sample  .gcloudignore  .gitignore  .gitlab-ci.yml  .renovaterc.json  .rustfmt.toml  CHANGELOG  Cargo.toml  Dockerfile  Makefile  Procfile  README.rst  Rocket.toml  RustConfig  diesel.toml  docker-compose.yml  rust-toolchain
.github/: dependabot.yml
.tool/: ci-runner  get-covered  load-gcloud  setup-cloud-sdk
doc/: INSTALL.rst  er.dot
migration/00000000000000_diesel_initial_setup/: down.sql  up.sql
migration/20190303205455_create_messages/: down.sql  up.sql
migration/20190326111346_create_users/: down.sql  up.sql
migration/20190328224123_create_user_emails/: down.sql  up.sql
migration/20190723215734_add_user_id_to_messages/: down.sql
migration/20190723_add_user_id_to_messages/: up.sql
migration/20200117204238_create_access_tokens/: down.sql  up.sql
migration/20200411224747_add_uuid_to_access_tokens/: down.sql  up.sql
migration/20200706221613_create_namespaces/: down.sql  up.sql
migration/20200706222430_create_streams/: down.sql  up.sql
migration/20200707160634_change_user_id_to_stream_id_in_messages/: down.sql  up.sql
migration/20200707163436_fix_title_length_in_messages/: down.sql  up.sql
migration/20200707171252_add_agent_id_and_agent_type_to_messages/: down.sql  up.sql
migration/20200710192309_create_memberships/: down.sql  up.sql
migrations/20190303205455_create_messages/: down.sql  up.sql
migrations/20190326111346_create_users/: down.sql  up.sql
src/: config.rs  db.rs  job.rs  lib.rs  logger.rs  main.rs  mq.rs  request.rs  response.rs  schema.rs  ss.rs  util.rs
src/mailer/: mock_transport.rs  mod.rs  user.rs
src/model/: access_token.rs  access_token_state.rs  activation_state.rs  agent_type.rs  format.rs  level.rs  log_format.rs  log_level.rs  membership.rs  membership_role.rs  message.rs  mod.rs  namespace.rs  role.rs  stream.rs  ticket.rs  token.rs  user.rs  user_activation_state.rs  user_email.rs  user_email_activation_state.rs  user_email_identification_state.rs  user_email_role.rs  user_email_verification_state.rs  user_reset_password_state.rs  user_state.rs  voucher.rs
src/request/: access_token.rs  access_token_state.rs  agent_type.rs  auth.rs  message.rs  mod.rs  namespace.rs  password_reset.rs  ticket.rs  token.rs  user.rs  voucher.rs
src/request/token/: authentication.rs  mod.rs  verification.rs
src/request/user/: authentication.rs  mod.rs  registration.rs
src/route/: access_token.rs  activation.rs  auth.rs  authentication.rs  error.rs  health.rs  message.rs  mod.rs  namespace.rs  password_reset.rs  registration.rs  top.rs  user.rs
src/route/access_token/: generation.rs
src/route/user/: activation.rs
src/routes/: assets.rs  auth.rs  errors.rs  index.rs  logs.rs  messages.rs
src/service/: account_activator.rs  activator.rs  mod.rs  password_updater.rs
src/templates/: base.html.tera  index.html.hbs  index.html.tera
src/templates/auth/: login.html.tera
src/templates/errors/: 404.html.hbs  404.html.tera
src/validation/: message.rs  mod.rs  namespace.rs  password_reset.rs  password_reset_request.rs  user.rs
static/css/: style.css
test/: access_token.rs  activation.rs  authentication.rs  error.rs  health.rs  login.rs  message.rs  namespace.rs  password_reset.rs  password_reset_request.rs  registration.rs  test.rs  top.rs  user.rs
test/access_token/: generation.rs  mod.rs
test/user/: activation.rs
tests/: assets_test.rs  error_test.rs  errors_test.rs  login_test.rs  logs_test.rs  message_test.rs  messages_test.rs  top_test.rs
