[package]
autobins = false
name = "eloquentlog-console-api"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "The console backend API server of Eloquentlog."
repository = "https://gitlab.com/eloquentlog/eloquentlog-console-api"
edition = "2018"
keywords = []
license = "AGPL-3.0-or-later"

[[bin]]
name = "router"
path = "src/bin/router.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
accord = { git = "https://github.com/ChrisBuchholz/accord.git", rev = "e56cecc" }
base64 = "0.10.1"
bcrypt = "0.6"
chrono = { version = "0.4.12", features = ["serde"] }
dotenv = "0.15"
fourche = "~0.1.1"
fnv = "1.0.3"
jsonwebtoken = "5.0"
lazy_static = "1.4"
lettre = "0.9.2"
lettre_email = "0.9.2"
native-tls = "0.2.3"
parking_lot = "0.7.1"
proctitle = "0.1.1"
# NOTE:
# r2d2_redis ?      -> redis 0.12.x
# r2d2_redis 0.10.x -> redis 0.11.x
# r2d2_redis 0.9.x  -> redis 0.10.x
r2d2_redis = "0.10.1"
rand = "0.6"
redis = "0.11.0"
regex = "0.2"
rocket = "0.4.2"
rocket_codegen = "*"
rocket-slog = "0.4"
rusty-fork = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"
sloggers = "0.3"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.diesel]
version = "1.4.2"
default-features = false
features = ["chrono", "postgres", "r2d2", "uuidv07"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dev-dependencies]
rstest = "0.5.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
