[package]
autobins = false
name = "eloquentlog-console-api"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "The console backend API server of Eloquentlog."
repository = "https://gitlab.com/eloquentlog/eloquentlog-console-api"
edition = "2018"
keywords = []
license = "AGPL-3.0-or-later"

[[bin]]
name = "eloquentlog-console-api-router"
path = "src/bin/router.rs"

[[bin]]
name = "eloquentlog-console-api-server"
path = "src/bin/server.rs"

[[bin]]
name = "eloquentlog-console-api-worker"
path = "src/bin/worker.rs"

[[test]]
name = "e2e"
path = "test/test.rs"

[dependencies]
accord = { git = "https://github.com/ChrisBuchholz/accord.git", rev = "e56cecc" }
base64 = "0.13.0"
bcrypt = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15"
fourche = "~0.2.0"
fnv = "1.0.7"
jsonwebtoken = "7.2"
lazy_static = "1.4"
lettre = "0.9.6"
lettre_email = "0.9.4"
native-tls = "0.2.8"
parking_lot = "0.11.2"
proctitle = "0.1.1"
openssl = { version = "0.10", features = ["vendored"] }
# NOTE:
# r2d2_redis ?      -> redis 0.12.x
# r2d2_redis 0.10.x -> redis 0.11.x
# r2d2_redis 0.9.x  -> redis 0.10.x
r2d2_redis = "0.14.0"
rand = "0.8"
redis = { version = "0.20.2", features = ["async-std-comp"] }
regex = "1.5"
rocket = "0.4.10"
rocket_http = "0.4.10"
rocket_codegen = "*"
rocket-slog = "0.4.0"
rusty-fork = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.7"
sloggers = "2.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.diesel]
version = "1.4.8"
default-features = false
features = ["chrono", "postgres", "r2d2", "uuidv07"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dev-dependencies]
rstest = "0.11.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
